# boollatex_parser

./: CMakeLists.txt  README.md  build.sh  build_and_test.sh  configure.sh  install.sh  test.sh
include/boollatex_parser/: boollatex_parser.hpp
src/: boollatex_parser.cpp  test  test.cpp
tests/: test.cpp
